--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,22 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+*{
+    font-family: Gilroy;
+}
+.font-sans {
+    font-family: 'Comic Sans MS', cursive;
+  }
+  .bgcard{
+    background-color: rgba(231, 231, 231, 0.164);
+  }
+  .right{
+    border-radius: 0px 30px 30px 0px ;
+  }
+  .left{
+    border-radius: 30px 0px 0px 30px;
+  }
+  .transparent{
+    background-color: rgba(255, 251, 242, 0.060);
+    /* box-shadow:20px red; */
+  }
